# advent-of-code-2023

./: .gitignore  Makefile  day_01.py  day_02.py  day_03.py  day_one.py  day_two.py  pyproject.toml  test_day_01.py  test_day_02.py  test_day_03.py  test_day_one.py  test_day_two.py  utils.py
.github/workflows/: qc-and-test.yaml
advent_of_code/: __init__.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  sparse_ranges.py  utils.py
tests/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_sparse_ranges.py
