[project]
authors = [{name = "Mahdi Lamb", email = "mahdilamb@gmail.com"}]
dependencies = ["numpy", "scipy"]
name = "advent-of-code"
version = "2023.12.04-2"
[tool.setuptools.package-dir]
"advent_of_code" = "advent_of_code"
[project.optional-dependencies]
all = ["advent-of-code[dev]"]
dev = [
  "ruff",
  "pytest",
  "mypy",
]
