[project]
authors = [{name = "Mahdi Lamb", email = "mahdilamb@gmail.com"}]
dependencies = ["numpy", "scipy"]
name = "advent-of-code"
version = "2023.12.05-2"
[tool.setuptools.package-dir]
"advent_of_code" = "advent_of_code"
[project.optional-dependencies]
all = ["advent-of-code[dev]"]
dev = [
  "ruff",
  "pytest",
  "mypy",
]
[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv -s"
