[project]
authors = [{name = "Mahdi Lamb", email = "mahdilamb@gmail.com"}]
dependencies = ["numpy", "scipy"]
name = "advent-of-code"
version = "2023.12.06-1"
[tool.setuptools.package-dir]
"advent_of_code" = "advent_of_code"
[project.optional-dependencies]
all = ["advent-of-code[dev,test]"]
dev = [
  "ruff",
  "mypy",
]
test = [
  "pytest",
  "pytest-coverage",
]
[tool.coverage.report]
exclude_also = [
  "def __repr__",
  "if 0:",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
  "^def main()",
]
[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]
indent-width = 4
line-length = 88
target-version = "py38"

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["ALL"]
ignore = []
select = ["E4", "E7", "E9", "F"]
unfixable = []

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
addopts = "-vv -s"
minversion = "6.0"
